 + Locale library: loc_noop -- Mark string for translation but don't translate it
 + Animate library: AnimInit([startAnimating]) -- New parameter startAnimating: if true, will start game in cinematic mode with most controls disabled. Must play an animation after that
 + Animate library: AnimSetInputMask(extraInputMask) -- Set input mask in a manner comptible with the Animate library
 + Gear values: “Boom” -- used to modify explosion size and/or damage for most gears
 + 8 overridable custom sprites/sounds: sprCustom1-sprCustom8, sndCustom1-sndCustom8
 * Fixed call: HideHog(gear) -- Fix crash when gear is invalid. Returns true on success or false otherwise
 * Fixed call: SwitchHog(gear) -- Fix new hog being unable to open ammo menu
 * Removed call: SetAmmoStore -- Old undocumented function of questional use, has never been used
 * Fixed variable: Goals -- Fix Goals text being cut off at ca. 255 characters
 * Fix huge numbers having sign errors on 64-bit architectures

====================== 0.9.22 ======================
 + New Weapon / Map object: AirMine (floating mine that will follow nearby hedgehogs)
 + Extensive changes to TechRacer: Variable terrain types, enhanced parameters, hwmap interpreter, fuel limiter, etc. 
 + HedgeEditor - create missions/etc. in-game! see https://hedgewars.org/HedgeEditor
 + Map previews can now take script parameters into account and preview waypoints in TechRacer
 + Added a couple new flags
 + Various tweaks to the interface and in-game chat
 + Divided teams options will now just be ignored when more/less than 2 teams/clans, instead of displaying a fatal error
 + Added 6 TechRacer maps to TechMaps
 + Added 3 SpeedShoppa Challenges: Shoppa Love, Ropes and Crates, The Customer is King
 + Hammer damage is now rounded up. This means it can be used to execute hedgehogs with only 1 hp.
 + Improved "Art" theme.
 * Generated bridges/girders are now connected better to the land mass
 * Fixed rubberband sprite